feat: Update student nickname retrieval to use a unified endpoint and enhance UI display